Adds new variables

--- a/assets/css/source/_variables.scss
+++ b/assets/css/source/_variables.scss
@@ -1,3 +1,18 @@
 // Fonts
 
 $main-font: 'Dsignes', sans-serif;
+
+
+
+// Font-sizes
+
+$huge: 3.5rem;
+$regular: 1rem;
+$tiny: .7rem;
+$small: .8rem;
+
+
+// Colors
+
+$yellow: #F8D000;
+$grey: #AFADAD;
