--- a/assets/css/source/_reset.scss
+++ b/assets/css/source/_reset.scss
@@ -1,9 +1,20 @@
-a{
-    color: inherit;
-    text-decoration: none;
+html{ 
+    font-size: 20px; // sets rem size
 
-    &:hover{
-        color: inherit;
-        text-decoration: none;
+    body{
+        font-family: $main-font;
+    
+        a{
+            color: inherit;
+            text-decoration: none;
+
+            &:hover{
+                color: inherit;
+                text-decoration: none;
+            }
+        }
     }
+
 }
+
+
