--- a/assets/css/source/_footer.scss
+++ b/assets/css/source/_footer.scss
@@ -1,5 +1,5 @@
 footer{
-    margin-top: 1000px;
+    margin-top: 80px;
     background-color: black;
     color: white;
 
@@ -11,12 +11,12 @@ footer{
         }
 
         h2{
-            font-size: 0.8rem;
+            font-size: $small;
             font-weight: bold;
         }
     
         a,p{
-            font-size: 0.7rem;
+            font-size: $tiny;
             padding-bottom: 0;
             margin-block-end: 0;
         }
@@ -54,6 +54,7 @@ footer{
             
             a{
                 padding-right: 2.5rem;
+                text-decoration: underline;
             }
         }
     }
