Fixes issue with header width

--- a/assets/css/source/_header.scss
+++ b/assets/css/source/_header.scss
@@ -1,5 +1,6 @@
 header{
     height: 355px;
+    width: 100%;
     padding-top: 50px;
     background-image: url(/assets/img/header_beaktor.jpg);
     background-size: contain;
