Resets counter (used in /legal.html subsections)

--- a/assets/css/source/_reset.scss
+++ b/assets/css/source/_reset.scss
@@ -3,6 +3,8 @@ html{
 
     body{
         font-family: $main-font;
+
+        counter-reset: subsection;
     
         a{
             color: inherit;
