Sets breakpoint for body text font-size downscale (changes all rem dependent elements)

--- a/assets/css/source/_reset.scss
+++ b/assets/css/source/_reset.scss
@@ -1,6 +1,10 @@
 html{ 
     font-size: 20px; // sets rem size
 
+    @include tablet-landscape-down{
+        font-size: 16px;
+    }
+
     body{
         font-family: $main-font;
 
