--- a/assets/css/source/_footer.scss
+++ b/assets/css/source/_footer.scss
@@ -10,13 +10,15 @@ footer{
             bottom: 40px; 
         }
 
-        h2{
+        h2,a,p{
             font-size: $small;
+        }
+
+        h2{
             font-weight: bold;
         }
     
-        a,p{
-            font-size: $tiny;
+        p{
             padding-bottom: 0;
             margin-block-end: 0;
         }
