--- a/assets/css/source/main.scss
+++ b/assets/css/source/main.scss
@@ -1,11 +1,10 @@
 @import 'variables';
-@import 'reset';
 @import 'typography';
-@import 'base';
-@import 'layout';
 @import 'mixins';
-@import 'components';
-
+//@import 'components';
+@import 'reset';
+@import 'base';
+//@import 'layout';
 
 @import 'navbar';
 @import 'header';
