--- a/assets/css/source/_mixins.scss
+++ b/assets/css/source/_mixins.scss
@@ -32,6 +32,10 @@
     @media (min-width: 768px) and (max-width: 991.98px) { @content; }
 }
 
+@mixin tablet-portrait-to-desktop {
+    @media (min-width: 768px) and (max-width: 1199.98px) { @content; }
+}
+
 @mixin tablet-landscape-down {
     @media (max-width: 991.98px) { @content; }
 }
