Changes logo img (temporary png for svg) and links /legal.html @ footer

--- a/assets/css/source/_footer.scss
+++ b/assets/css/source/_footer.scss
@@ -27,6 +27,10 @@ footer{
             width: 30px;
             filter: brightness(10);
         }
+
+        .footer-logo img{
+            width: 150px;
+        }
     
         .footer-menus{
     
