--- a/assets/css/source/_header.scss
+++ b/assets/css/source/_header.scss
@@ -8,6 +8,15 @@ header{
     background-position: bottom;
     background-color: #f9f9f9;
 
+    @include tablet-portrait-to-landscape{
+        height: 300px;
+    }
+
+    @include tablet-portrait-down{
+        height: 250px;
+        background-image: url(/assets/img/header_beaktor_mobile.jpg);
+    }
+
     h1.header-title{
         font-size: $huge;
         font-weight: bold;
