--- a/assets/css/source/main.scss
+++ b/assets/css/source/main.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 @import 'typography';
 @import 'mixins';
-//@import 'components';
+@import 'components';
 @import 'reset';
 @import 'base';
 //@import 'layout';
