Adds new color variables

--- a/assets/css/source/_variables.scss
+++ b/assets/css/source/_variables.scss
@@ -11,3 +11,6 @@ $tiny: .7rem;
 // Colors
 $yellow: #F8D000;
 $grey: #AFADAD;
+$pink: #FAD0C5;
+$beakblue: #99BCCE; // Beaktor blue
+$bootsblack: #212529; // Bootstrap black
