--- a/assets/css/source/_base.scss
+++ b/assets/css/source/_base.scss
@@ -28,14 +28,27 @@
             padding-top: 80px;
         }
 
-        h2{
+        h2.section-title{
             font-size: $big;
             font-weight: bold;
             padding-bottom: 45px;
             border-bottom: 1px solid $grey;
+            &::before{
+                content: url(/assets/img/vec/boton_menos_popup.svg);
+                display: inline-flex;
+                width: 20px;
+                position: absolute;
+                top: 0;
+                left: -40px;
+
+                @include phone-only{
+                    top: -40px;
+                    left: 0;
+                }
+            }
         }
 
-        h3{
+        h3.subsection{
             font-size: 1rem;
             font-weight: bold;
             text-transform: uppercase;
