Fixes issue with main container max-width

--- a/assets/css/source/main.scss
+++ b/assets/css/source/main.scss
@@ -3,8 +3,9 @@
 @import 'mixins';
 @import 'components';
 @import 'reset';
+@import 'layout';
 @import 'base';
-//@import 'layout';
+
 
 @import 'navbar';
 @import 'header';
