--- a/assets/css/source/_base.scss
+++ b/assets/css/source/_base.scss
@@ -1,3 +1,15 @@
+/*----- GENERAL ------- */
+
+.hidden{
+    height: 0px;
+    opacity: 0;
+}
+
+.showing{
+    height: 100% !important;
+    opacity: 1;
+}
+
 /*------ CONTACTO ------ */
 
 #contacto{
@@ -33,36 +45,33 @@
             font-weight: bold;
             padding-bottom: 45px;
             border-bottom: 1px solid $grey;
+            cursor: pointer;
             &::before{
-                content: url(../../img/vec/boton_menos_popup.svg);
-                display: inline-flex;
-                width: 20px;
-                position: absolute;
-                top: -5px;
-                left: -40px;
+                @extend %dropdown-icon;
+            }
+        }
 
-                @include phone-only{
-                    top: -40px;
-                    left: 0;
+        .drop-down{
+            overflow: hidden;
+            transition: height .3s, opacity .3s ease-out;
+
+            h3.subsection{
+                font-size: 1rem;
+                font-weight: bold;
+                text-transform: uppercase;
+                padding-top: 35px;
+    
+                &::before{
+                    counter-increment: subsection;
+                    content: counter(subsection) ". ";
                 }
             }
-        }
-
-        h3.subsection{
-            font-size: 1rem;
-            font-weight: bold;
-            text-transform: uppercase;
-            padding-top: 35px;
-
-            &::before{
-                counter-increment: subsection;
-                content: counter(subsection) ". ";
+    
+            .no-bullets{
+                list-style-type: none;
+                padding-inline-start: 0;
             }
         }
-
-        .no-bullets{
-            list-style-type: none;
-            padding-inline-start: 0;
-        }
+    
     }
 }
