--- a/assets/css/source/_components.scss
+++ b/assets/css/source/_components.scss
@@ -25,3 +25,24 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 } 
+
+%dropdown-icon{
+    content: url(../../img/vec/boton_mas_activo.svg);
+    display: inline-flex;
+    width: 20px;
+    position: absolute;
+    top: -5px;
+    left: -40px;
+    opacity: 0.3;
+    transition: opacity .3s;
+
+    @include phone-only{
+        top: -40px;
+        left: 0;
+    }
+
+    &.open{
+        content: url(../../img/vec/boton_menos_popup.svg);
+        opacity: 1;
+    }
+}
