Creates section-title component and applies it @ different places

--- a/assets/css/source/_base.scss
+++ b/assets/css/source/_base.scss
@@ -41,9 +41,7 @@
         }
 
         h2.section-title{
-            font-size: $big;
-            font-weight: bold;
-            padding-bottom: 45px;
+            @extend %section-title;
             border-bottom: 1px solid $grey;
             cursor: pointer;
             &::before{
