--- a/assets/css/source/_header.scss
+++ b/assets/css/source/_header.scss
@@ -8,6 +8,9 @@
 
     .hero-title{
         @extend %hero-title;
+        &.downfont{
+            font-size: $big;
+        }
         bottom: 40px;
         
     }
