New color variables

--- a/assets/css/source/_variables.scss
+++ b/assets/css/source/_variables.scss
@@ -11,6 +11,13 @@ $tiny: .7rem;
 // Colors
 $yellow: #F8D000;
 $grey: #AFADAD;
-$pink: #FAD0C5;
+$beakpink: #FAD0C5;
 $beakblue: #99BCCE; // Beaktor blue
+$beakflesh: #FFE7AC;
+$beakgreen: #C0E0CD;
 $bootsblack: #212529; // Bootstrap black
+// table color swatches
+$blueswatch: #7595B3;
+$pinkswatch: #F6D0D5;
+$greenswatch: #CBD6D0;
+$greyswacth: #D4D3D4;
