--- a/assets/css/source/_configura.scss
+++ b/assets/css/source/_configura.scss
@@ -27,12 +27,18 @@
 
         img{
             width: 325px;
+
+            @include desktop-down{
+                width: 100%;
+            }
         }
     }
 
     // End general
 
     #models-table{
+
+        overflow: scroll;
 
         .table-row{
             padding: {
@@ -41,14 +47,6 @@
             }
 
             .col-2{
-
-                .row-name{
-                    color: $grey;
-                    &::before{
-                        @extend %row-icon;
-                    }
-                    
-                }
 
                 .row{
                     flex-direction: column;
@@ -63,7 +61,22 @@
                     }
                 }
     
-            } 
+            }
+
+            .row-name{
+                color: $grey;
+                &::before{
+                    @extend %row-icon;
+                }
+                
+            }
+
+            .col-md-9 > .row{
+
+                @include phone-only{
+                    flex-wrap: nowrap;
+                }
+            }
         } 
 
         #table-header h3{
@@ -83,7 +96,7 @@
         #table-colores,
         #table-materiales{
 
-            .col-9 .col-6 > .row{
+            .col-sm-6 .row{
                 width: 100%;
                 padding-left: 15px;
 
@@ -93,6 +106,11 @@
                     padding: 0;
                     margin-right: 0.5em;
                     border-radius: .5em;
+
+                    @include tablet-landscape-down{
+                        width: 35px;
+                        height: 35px;
+                    }
     
                     img{
                         width: 100%;
@@ -113,7 +131,6 @@
     
                 }
             }
-
         }
 
         #table-dimensiones{
@@ -134,11 +151,25 @@
         #table-buttons{
             padding-top: 90px;
 
-            button{
-                @extend %beak-button;
+            .btn-wrapper{
+                @include phone-only{
+                    text-align: center;
+                }
+
+                button{
+                    @extend %beak-button;
+                }
             }
+
         }
         
+    }
+
+    #beakart{
+
+        .beakart-img{
+            align-self: flex-end;
+        }
     }
 
     #beakart-carousel{
@@ -173,6 +204,10 @@
            display: flex;
            justify-content: space-between;
 
+           @include tablet-portrait-down{
+               justify-content: space-around;
+           }
+
            button{
                @extend %beak-button;
            }
@@ -181,4 +216,3 @@
    }
 
 }
-
