--- a/assets/css/source/_components.scss
+++ b/assets/css/source/_components.scss
@@ -115,3 +115,30 @@
         width: 25px;
     }
 }
+
+%tooltip{
+    display: inline;
+    position: absolute;
+    top: 0;
+    left: 60px;
+    width: 300px;
+    height: 150px;
+    padding: 15px;
+    background-color: white;
+    border: 1px solid $grey;
+    border-radius: .5rem;
+    z-index: 1000;
+    animation-name: fade-in;
+    animation-duration: .5s;
+
+    @keyframes fade-in{
+        0%{
+            opacity: 0;
+        }
+        100%{
+            opacity: 1;
+        }
+    }
+}
+
+    
