Sets toottip component 'content' property as variable (temporary solution)

--- a/assets/css/source/_variables.scss
+++ b/assets/css/source/_variables.scss
@@ -16,8 +16,11 @@ $beakblue: #99BCCE; // Beaktor blue
 $beakflesh: #FFE7AC;
 $beakgreen: #C0E0CD;
 $bootsblack: #212529; // Bootstrap black
-// table color swatches
+// Table color swatches
 $blueswatch: #7595B3;
 $pinkswatch: #F6D0D5;
 $greenswatch: #CBD6D0;
 $greyswacth: #D4D3D4;
+
+// Tooltip contents
+$tooltip-one: 'Lorem Ipsum'
