Increases navbar z-index to overlap Bootstrap modals

--- a/assets/css/source/_navbar.scss
+++ b/assets/css/source/_navbar.scss
@@ -2,7 +2,7 @@
     position: fixed;
     width: 100%;
     top: 0;
-    z-index: 1000;
+    z-index: 1055; // override modals
     height: 54px;
     background-color: black;
 
