Modal & tooltip components for use as tooltips

--- a/assets/css/source/_components.scss
+++ b/assets/css/source/_components.scss
@@ -141,4 +141,98 @@
     }
 }
 
+%tooltip-modal{
+    overflow: visible;
+    padding-right: 0 !important;
+
+    @include phone-only{
+        padding-top: 60px;
+    }
+
+    @include phone-up{
+        position: absolute;
+        top: -30px;
+        left: 100%;
+    }
+
+    .modal-content{
+        padding-left: 2rem;
+        position: relative;
+
+        .modal-header{
+            padding-bottom: 0 !important;
+            justify-content: flex-start;
+            border-color: transparent;
+
+            h5.modal-title{
+                font-size: 0.9rem;
+                font-weight: bold;
+            }
+
+            img{
+                position: absolute;
+                top: 20px;
+                left: 20px;
+                width: 15px;
+                cursor: pointer;
+
+                @include tablet-landscape-up{
+                    width: 20px;
+                }
+            }
+        }
+
+        .modal-body{
+            font-size: 0.8rem;
+            color: $grey;
+        }
+    }
+}
+
+%tooltip-popover{
+    font-family: inherit;
+    top: 60px !important;
+
+    .arrow{
+        &::before,
+        &::after{
+            content: none;
+        }
+    }
+
+    .popover-header,
+    .popover-body{
+        padding-left: 2rem;
+    }
+
+    .popover-header{
+        font-size: 0.9rem;
+        font-weight: bold;
+        background: transparent;
+        position: relative;
+        &::before{
+            content: url(../../img/vec/boton_menos_popup.svg);
+            position: absolute;
+            left: 10px;
+            top: 10px;
+            width: 15px;
+
+            @include tablet-landscape-up{
+                width: 20px;
+            }
+        }
+    }
+
+    .popover-body{
+        font-size: 0.8rem;
+        color: $grey;
+    }
+
+    &:hover{
+        cursor: pointer;
+    }
+
+    
+}
+
     
